# gravity-wave-finetuning

./: README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
prithviwxc/gravitywave/: config.py  datamodule.py  gravity_wave_model.py  inference.py
scripts/: train.sh
