[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prithviwxc-gravitywave"
version = "0.1.0"
description = "Gravity Wave Parameterization"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sujit Roy", email = "sr0197@uah.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "cachetools==5.5.0",
    "cartopy==0.23.0",
    "click==8.1.7",
    "cloudpickle==3.0.0",
    "contourpy==1.3.0",
    "cycler==0.12.1",
    "dask==2024.8.1",
    "docker-pycreds==0.4.0",
    "fonttools==4.53.1",
    "fsspec==2024.6.1",
    "gitdb==4.0.11",
    "gitpython==3.1.43",
    "h5netcdf==1.3.0",
    "h5py==3.11.0",
    "kiwisolver==1.4.7",
    "locket==1.0.0",
    "matplotlib==3.9.2",
    "nvidia-ml-py==12.535.161",
    "nvitop==1.3.2",
    "pandas==2.2.2",
    "partd==1.4.2",
    "platformdirs==4.2.2",
    "protobuf",
    "pyhelpme==0.1",
    "pyparsing==3.1.4",
    "pyproj==3.6.1",
    "pyshp==2.3.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.1",
    "sentry-sdk==2.13.0",
    "setproctitle==1.3.3",
    "shapely==2.0.6",
    "smmap==5.0.1",
    "tabulate==0.9.0",
    "termcolor==2.4.0",
    "toolz==0.12.1",
    "tqdm==4.66.5",
    "tzdata==2024.1",
    "wandb==0.17.7",
    "xarray==2024.7.0",
    "yacs==0.1.8",
    "asttokens==2.4.1",
    "brotli==1.0.9",
    "certifi==2024.8.30",
    "charset-normalizer==3.3.2",
    "comm==0.2.2",
    "debugpy==1.8.5",
    "decorator==5.1.1",
    "exceptiongroup==1.2.2",
    "executing==2.1.0",
    "filelock==3.13.1",
    "idna==3.7",
    "importlib-metadata==8.4.0",
    "intel-openmp==2023.1.0",
    "ipykernel==6.29.5",
    "ipython==8.27.0",
    "jedi==0.19.1",
    "jinja2==3.1.4",
    "jupyter_client==8.6.2",
    "jupyter_core==5.7.2",
    "markupsafe==2.1.3",
    "matplotlib-inline==0.1.7",
    "mkl==2023.2.0",
    "mpmath==1.3.0",
    "numpy==1.26.4",
    "protobuf==4.25.3",
    "scipy==1.13.1",
    "torch",
    "torchaudio",
    "torchvision",
    "yacs==0.1.8",
    "PrithviWxC@git+https://github.com/NASA-IMPACT/Prithvi-WxC.git@main#egg=PrithviWxC"
]

[project.urls]
homepage = "https://github.com/NASA-IMPACT/gravity-wave-finetuning"

[tool.setuptools]
packages = ["prithviwxc"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["prithviwxc"]
